[package]
name = "pomotimer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
resolver="2"
members=["prisma-cli"]

[dependencies]
log = "0.4"
tokio = "1.34.0"
serde = "1.0.192"
axum = {version="0.6.20", features=["tokio", "json"]}
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.9", default-features=false, features=["sqlite"] }
